--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.svg">
 
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>  
+    <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script> 
     <script src="./assets/js/script.js" defer></script>
 </head>
 <body>
@@ -33,9 +32,9 @@
                 <div class="header__reserve">
                     <a class="header__reserve-link header__link" href="#">Reserve</a>
                 </div>
-                <button class="menu-toggle">
-                    <span class="menu-toggle__bar"></span>
-                    <span class="menu-toggle__bar"></span>
+                <button class="menu-trigger">
+                    <span class="menu-trigger__bar"></span>
+                    <span class="menu-trigger__bar"></span>
                 </button>
             </div>
         </div>
