--- a/index.html
+++ b/index.html
@@ -165,7 +165,9 @@
                         The one that made “sport utility” a household term. The one to combine a farm tool with a family hauler, 
                         and from which all others have followed since. The spirit of the original, retooled and ready for a classic American comeback.
                     </p>
-                    <a class="about__button box-button box-button--white" href="#">Our story</a>
+                    <div class="about__button-wrap">
+                        <a class="about__button box-button box-button--white" href="#">Our story</a>
+                    </div>
                 </div>
             </div>
             <div class="about__cta reserve-cta reserve-cta--sm">
@@ -196,8 +198,8 @@
             </div>
             <div class="viewfinder__rotate">
                 <h2 class="viewfinder__rotate-title">
-                    An icon<br>
-                    from<br>
+                    <span>An icon</span>
+                    <span>from</span>
                     <span>day one</span>
                 </h2>
                 <svg class="viewfinder__rotate-bg" preserveAspectRatio="xMidYMid slice" viewBox="0 0 1345 1034" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="currentColor"> 
