--- a/index.html
+++ b/index.html
@@ -348,13 +348,13 @@
         </section>
         <section class="sec product">
             <div class="product__title-wrap sec__wrap">
-                <h2 class="product__title sec__title">
+                <h2 class="product__title sec__title scroll-anim">
                     The duo<br>
                     that does it all.
                 </h2>
             </div>
             <div class="product__list">
-                <li class="product__item">
+                <li class="product__item scroll-anim">
                     <div class="product__item-content">
                         <h4 class="product__item-title">Traveler</h4>
                         <p class="product__item-text">The original icon, renewed.</p>
@@ -367,7 +367,7 @@
                         <span class="sr-only">Discover Traveler</span>
                     </a>
                 </li>
-                <li class="product__item">
+                <li class="product__item scroll-anim">
                     <div class="product__item-content">
                         <h4 class="product__item-title">Terra</h4>
                         <p class="product__item-text">The no-days-off pickup.</p>
@@ -384,13 +384,13 @@
         </section>
         <section class="sec story">
             <div class="story__contents sec__wrap">
-                <h2 class="story__title sec__title">In it for the long haul.</h2>
-                <p class="story__desc sec__desc">This is a company as rugged as our vehicles. One that’s built to last, from the dirt up, by passionate people. 
+                <h2 class="story__title sec__title scroll-anim">In it for the long haul.</h2>
+                <p class="story__desc sec__desc scroll-anim">This is a company as rugged as our vehicles. One that’s built to last, from the dirt up, by passionate people. 
                     American-born and American-made, Scout vehicles will be engineered in Detroit, built in South Carolina, and backed by the manufacturing and 
                     production expertise of Volkswagen Group - meaning, there’s plenty of road ahead. 
                     This is the next great American motor company, forged from the past, heading towards a bright future.
                 </p>
-                <a class="story__button box-button box-button--gray" href="#">Our story</a>
+                <a class="story__button box-button box-button--gray scroll-anim" href="#">Our story</a>
             </div>
         </section>
         <section class="sec legal">
