Refactor: footer 코드 개선

--- a/index.html
+++ b/index.html
@@ -518,14 +518,12 @@
             </div>
         </div>
         <div class="footer__row footer__row--btm">
-            <div class="footer__fixed-area">
-                <div class="footer__fixed">
-                    <div aria-hidden="true" class="footer__marquee">
-                        <span>Reserve</span>
-                        <span>Reserve</span>
-                    </div>
-                    <button class="footer__button box-button box-button--black">Reserve Now</button>
+            <div class="footer__row-inner">
+                <div aria-hidden="true" class="footer__marquee">
+                    <span>Reserve</span>
+                    <span>Reserve</span>
                 </div>
+                <button class="footer__button box-button box-button--black">Reserve Now</button>
             </div>
         </div>
     </footer>
