Design: Safari 전용 레이아웃 추가

--- a/index.html
+++ b/index.html
@@ -324,11 +324,11 @@
                 <img aria-hidden="true" class="camp__deco-img camp__deco-img--badge" src="./assets/images/camp-badge.svg" alt="뱃지 이미지">
             </div>
             <div class="camp__video-wrap">
-                <video class="camp__video pc-only" loop autoplay muted playsinline data-wf-ignore="true">
+                <video class="camp__video" loop autoplay muted playsinline data-wf-ignore="true">
                     <source src="./assets/images/camp-video.webm" type="video/webm">
                     <!-- <source src="https://www.scoutmotors.com/assets/videos/camp1015-hevc-safari.mp4" type="video/mp4; codecs=&quot;hvc1&quot;"> -->
                 </video>
-                <img class="camp__img tb-show" src="./assets/images/camp-img.png" alt="캠프 이미지">
+                <img class="camp__img" src="./assets/images/camp-img.png" alt="캠프 이미지">
             </div>
         </section>
         <section class="sec reveal-event">
