--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scout Motors clone coding</title>
     <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.svg">
-
+    <meta name="robots" content="noindex">
+    <meta name="googlebot" content="noindex">
+    <meta property="og:title" content="Scout Motors clone coding">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://miraeae.github.io/scoutmotors">
+    <meta property="og:description" content="Scout Motors 클론 코딩">
     <link rel="stylesheet" href="./assets/css/style.css">
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
