--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <meta property="og:url" content="https://miraeae.github.io/scoutmotors">
     <meta property="og:description" content="Scout Motors 클론 코딩">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script> 
+    <script src="https://unpkg.com/@studio-freight/lenis@1.0.42/dist/lenis.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./assets/js/script.js" defer></script>
 </head>
 <body>
@@ -354,6 +356,86 @@
                         <source src="https://videos.ctfassets.net/bi0eniwfxrs8/6DpSzBqkk5NvLQLQkCUWWg/1cb76be2be6792e30cbddfdb4f3e8a41/Scout_Reveal_Sizzle_Final_Deliverable.mp4" type="video/mp4">
                     </video>
                 </div>
+                <div class="reveal-event__gallery" aria-label="Image gallery">
+                    <p class="sr-only">This gallery features a variety of photos from the Scout Motors reveal event.</p>
+                    <div class="swiper gallery-thum" aria-hidden="true">
+                        <ul class="swiper-wrapper">
+                            <li class="swiper-slide">
+                                <img src="./assets/images/gallery-thum-01.jpg" alt="gallery image 1">
+                            </li>
+                            <li class="swiper-slide">
+                                <img src="./assets/images/gallery-thum-02.jpg" alt="gallery image 2">
+                            </li>
+                            <li class="swiper-slide">
+                                <img src="./assets/images/gallery-thum-03.jpg" alt="gallery image 3">
+                            </li>
+                            <li class="swiper-slide">
+                                <img src="./assets/images/gallery-thum-04.jpg" alt="gallery image 4">
+                            </li>
+                            <li class="swiper-slide">
+                                <img src="./assets/images/gallery-thum-05.jpg" alt="gallery image 5">
+                            </li>
+                            <li class="swiper-slide">
+                                <img src="./assets/images/gallery-thum-06.jpg" alt="gallery image 6">
+                            </li>
+                            <li class="swiper-slide">
+                                <img src="./assets/images/gallery-thum-07.jpg" alt="gallery image 7">
+                            </li>
+                            <li class="swiper-slide">
+                                <img src="./assets/images/gallery-thum-08.jpg" alt="gallery image 8">
+                            </li>
+                        </ul>
+                        <div class="gallery-thum-navigation">
+                            <div class="swiper-button-prev">
+                                <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M12.8464 9.35684L8.17951 14.0237C7.95161 14.2516 7.84083 14.5188 7.84716 14.8253C7.85351 15.1318 7.97063 15.399 8.19853 15.6269C8.42643 15.8382 8.69364 15.947 9.00016 15.9533C9.30668 15.9597 9.57388 15.8489 9.80178 15.621L16.4018 9.02097C16.5138 8.90902 16.5956 8.78474 16.6472 8.64814C16.6988 8.51156 16.7246 8.36863 16.7246 8.21934C16.7246 8.07006 16.6988 7.92713 16.6472 7.79054C16.5956 7.65394 16.5138 7.52967 16.4018 7.41772L9.79581 0.811742C9.58059 0.596508 9.31755 0.488892 9.00668 0.488892C8.69582 0.488892 8.42643 0.596508 8.19853 0.811742C7.97063 1.03964 7.85668 1.31002 7.85668 1.62287C7.85668 1.93573 7.97063 2.20612 8.19853 2.43402L12.8464 7.08184H1.93441C1.61519 7.08184 1.3458 7.19163 1.12624 7.41119C0.90667 7.63076 0.796884 7.90014 0.796884 8.21934C0.796884 8.53854 0.90667 8.80793 1.12624 9.02749C1.3458 9.24706 1.61519 9.35684 1.93441 9.35684H12.8464Z" fill="#1C1B1F"></path>
+                                </svg>
+                            </div>
+                            <div class="swiper-button-next">
+                                <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M12.8464 9.35684L8.17951 14.0237C7.95161 14.2516 7.84083 14.5188 7.84716 14.8253C7.85351 15.1318 7.97063 15.399 8.19853 15.6269C8.42643 15.8382 8.69364 15.947 9.00016 15.9533C9.30668 15.9597 9.57388 15.8489 9.80178 15.621L16.4018 9.02097C16.5138 8.90902 16.5956 8.78474 16.6472 8.64814C16.6988 8.51156 16.7246 8.36863 16.7246 8.21934C16.7246 8.07006 16.6988 7.92713 16.6472 7.79054C16.5956 7.65394 16.5138 7.52967 16.4018 7.41772L9.79581 0.811742C9.58059 0.596508 9.31755 0.488892 9.00668 0.488892C8.69582 0.488892 8.42643 0.596508 8.19853 0.811742C7.97063 1.03964 7.85668 1.31002 7.85668 1.62287C7.85668 1.93573 7.97063 2.20612 8.19853 2.43402L12.8464 7.08184H1.93441C1.61519 7.08184 1.3458 7.19163 1.12624 7.41119C0.90667 7.63076 0.796884 7.90014 0.796884 8.21934C0.796884 8.53854 0.90667 8.80793 1.12624 9.02749C1.3458 9.24706 1.61519 9.35684 1.93441 9.35684H12.8464Z" fill="#1C1B1F"></path>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="gallery-modal" aria-modal="true" aria-expanded="false" tabindex="-1">
+                        <div class="gallery-modal__content">
+                            <button class="gallery-modal__close">×</button>
+                            <div class="swiper gallery-modal__swiper">
+                                <ul class="swiper-wrapper">
+                                    <li class="swiper-slide">
+                                        <img src="./assets/images/gallery-01.jpg" alt="gallery image 1">
+                                    </li>
+                                    <li class="swiper-slide">
+                                        <img src="./assets/images/gallery-02.jpg" alt="gallery image 2">
+                                    </li>
+                                    <li class="swiper-slide">
+                                        <img src="./assets/images/gallery-03.jpg" alt="gallery image 3">
+                                    </li>
+                                    <li class="swiper-slide">
+                                        <img src="./assets/images/gallery-04.jpg" alt="gallery image 4">
+                                    </li>
+                                    <li class="swiper-slide">
+                                        <img src="./assets/images/gallery-05.jpg" alt="gallery image 5">
+                                    </li>
+                                    <li class="swiper-slide">
+                                        <img src="./assets/images/gallery-06.jpg" alt="gallery image 6">
+                                    </li>
+                                    <li class="swiper-slide">
+                                        <img src="./assets/images/gallery-07.jpg" alt="gallery image 7">
+                                    </li>
+                                    <li class="swiper-slide">
+                                        <img src="./assets/images/gallery-08.jpg" alt="gallery image 8">
+                                    </li>
+                                </ul>
+                                <div class="gallery-modal-navigation">
+                                    <div class="swiper-button-prev"></div>
+                                    <div class="swiper-button-next"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="sec product">
@@ -428,7 +510,7 @@
                         <img src="./assets/images/logo-2x.png" alt="Scout Motors logo">
                     </a>
                 </div>
-                <ul class="fnb"> 
+                <ul class="fnb" aria-label="Footer menu"> 
                     <li class="fnb__item">
                         <a href="#" class="fnb__item-link">Our story</a> 
                     </li>
@@ -487,18 +569,18 @@
                     </div>
                     <ul class="footer__sns">
                         <li class="footer__sns-item">
-                            <a href="#" class="footer__sns-link">
-                                <img src="./assets/images/sns-facebook.png" alt="facebook icon">
+                            <a href="#" class="footer__sns-link" aria-label="Facebook">
+                                <img src="./assets/images/sns-facebook.png" alt="">
                             </a>
                         </li>
                         <li class="footer__sns-item">
-                            <a href="#" class="footer__sns-link">
-                                <img src="./assets/images/sns-instagram.png" alt="instagram icon">
+                            <a href="#" class="footer__sns-link" aria-label="Instagram">
+                                <img src="./assets/images/sns-instagram.png" alt="">
                             </a>
                         </li>
                         <li class="footer__sns-item">
-                            <a href="#" class="footer__sns-link">
-                                <img src="./assets/images/sns-youtube.png" alt="youtube icon">
+                            <a href="#" class="footer__sns-link" aria-label="Youtube">
+                                <img src="./assets/images/sns-youtube.png" alt="">
                             </a>
                         </li>
                     </ul>
@@ -508,28 +590,26 @@
                 <small class="footer__legal-copyright">
                     © 2025 scout motors inc. or its affiliates. ALL RIGHTS RESERVED
                 </small>
-                <nav class="footer__nav" aria-label="Footer menu">
-                    <ul class="footer__legal-list"> 
-                        <li class="footer__legal-item">
-                            <a href="#" class="footer__legal-link">Code of conduct</a>
-                        </li>
-                        <li class="footer__legal-item">
-                            <a href="#" class="footer__legal-link">Vendor Setup</a>
-                        </li>
-                        <li class="footer__legal-item">
-                            <a href="#" class="footer__legal-link">Privacy</a>
-                        </li>
-                        <li class="footer__legal-item">
-                            <a href="#" class="footer__legal-link">Terms of use</a>
-                        </li>
-                        <li class="footer__legal-item">
-                            <a href="#" class="footer__legal-link">Cookies</a>
-                        </li>
-                        <li class="footer__legal-item">
-                            <a href="#" class="footer__legal-link">Legal</a>
-                        </li>
-                    </ul>
-                </nav>
+                <ul class="footer__legal-list"> 
+                    <li class="footer__legal-item">
+                        <a href="#" class="footer__legal-link">Code of conduct</a>
+                    </li>
+                    <li class="footer__legal-item">
+                        <a href="#" class="footer__legal-link">Vendor Setup</a>
+                    </li>
+                    <li class="footer__legal-item">
+                        <a href="#" class="footer__legal-link">Privacy</a>
+                    </li>
+                    <li class="footer__legal-item">
+                        <a href="#" class="footer__legal-link">Terms of use</a>
+                    </li>
+                    <li class="footer__legal-item">
+                        <a href="#" class="footer__legal-link">Cookies</a>
+                    </li>
+                    <li class="footer__legal-item">
+                        <a href="#" class="footer__legal-link">Legal</a>
+                    </li>
+                </ul>
             </div>
             <div class="footer__bg">
                 <img class="pc-only" src="./assets/images/footer-bg.webp" alt="">
